--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -42,3 +42,10 @@ CUSTOMER_CREATED=Customer created successfully
 CUSTOMER_UPDATED=Customer updated successfully
 CUSTOMER_DELETED=Customer deleted successfully
 CUSTOMER_NOT_FOUND=Customer not found
+SHOP_ALREADY_EXISTS=Shop already exists
+SHOP_NOT_FOUND=Shop not found
+SALES_REPORT_CREATED=Sales report created successfully
+TABLE_CREATED=Table created successfully
+TABLE_LIST=Table list retrieved successfully
+TABLE_STATUS_UPDATED=Table status updated successfully
+TABLE_NOT_FOUND=Table not found
