--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Link xác th?c frontend
 app.frontend.verify-url=http://localhost:3000/verify
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+# Gi?i h?n dung l??ng file ?nh
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+# ???ng d?n m?c ??nh n?u không set t? bên ngoài
+app.upload.temp-dir=uploads/temp/
