--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,17 @@ spring.application.name=sales-management-backend
 spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb
 spring.data.mongodb.database=salesdb
 server.port=8080
-jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
-# C?u hình Gmail
+app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=trictps03805@gmail.com
 spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-# Link xác th?c frontend
 app.frontend.verify-url=http://localhost:3000/verify
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
-# Gi?i h?n dung l??ng file ?nh
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-
-# ???ng d?n m?c ??nh n?u không set t? bên ngoài
 app.upload.temp-dir=uploads/temp/
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
