--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,3 @@
 spring.application.name=sales-management-backend
-spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb
-spring.data.mongodb.database=salesdb
+spring.profiles.active=dev
 server.port=8080
-app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=trictps03805@gmail.com
-spring.mail.password=ibpp sdch ajul xdnd
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-app.frontend.verify-url=http://localhost:3000/verify
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
-app.upload.temp-dir=uploads/temp/
-spring.jackson.time-zone=Asia/Ho_Chi_Minh
-
