--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,24 +1,16 @@
-# MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb
 spring.data.mongodb.database=salesdb
-
-# JWT (dài, m?nh)
 app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
-
-# Gmail th?t ?? g?i mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=trictps03805@gmail.com
 spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-# Giao di?n xác th?c (FE production)
 app.frontend.verify-url=https://yourdomain.com/verify
-
-# Upload
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 app.upload.temp-dir=uploads/temp/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+logging.level.org.springdoc=DEBUG
