--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,10 @@
-spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb
-spring.data.mongodb.database=salesdb
+spring.data.mongodb.uri=mongodb+srv://trichuthanh:3FoSuC6mwozL9N4Y@salesdb-test.vr10ibi.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-test
+spring.data.mongodb.database=salesdb-test
 app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
+# Fake mail config để tránh lỗi
+spring.mail.username=ignored
+spring.mail.password=ignored
+spring.mail.host=localhost
+spring.mail.port=1025
+app.mail.enabled=false
+app.frontend.verify-url=https://dummy-verify-url.test
