--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/salesdb
-spring.data.mongodb.database=salesdb
-app.jwt.secret=dev-secret-key-123456789
+spring.data.mongodb.uri=mongodb+srv://trichuthanh:z9KMoKKHieqtvTgN@salesdb-dev.f0h17vh.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-dev
+spring.data.mongodb.database=salesdb-dev
+app.jwt.secret=sandro-sales-dev-secret-2025-very-long-and-secure-key!
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-dev-email@gmail.com
-spring.mail.password=dev-password
+spring.mail.username=trictps03805@gmail.com
+spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 app.frontend.verify-url=http://localhost:3000/verify
