--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,3 +14,4 @@ spring.servlet.multipart.max-request-size=2MB
 app.upload.temp-dir=uploads/temp/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 logging.level.org.springdoc=DEBUG
+webhook.secret=your-webhook-secret
