--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=sales-management-backend
 spring.profiles.active=dev
 server.port=8080
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=trictps03805@gmail.com
+spring.mail.password=ibpp sdch ajul xdnd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
