--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,5 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 app.upload.temp-dir=uploads/temp/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+webhook.secret=your-webhook-secret
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
