--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,4 @@ app.upload.temp-dir=uploads/temp/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 logging.level.org.springdoc=DEBUG
 webhook.secret=your-webhook-secret
+spring.cache.type=simple
