--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,3 +8,4 @@ spring.mail.host=localhost
 spring.mail.port=1025
 app.mail.enabled=false
 app.frontend.verify-url=https://dummy-verify-url.test
+spring.cache.type=simple
