--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.mail.username=trictps03805@gmail.com
 spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.cache.type=simple
