--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,4 @@ app.upload.temp-dir=uploads/temp/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 webhook.secret=your-webhook-secret
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+spring.cache.type=simple
