--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,4 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 logging.level.org.springdoc=DEBUG
 webhook.secret=your-webhook-secret
 spring.cache.type=simple
+app.fe.url=http://localhost:5173
