--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.mail.username=trictps03805@gmail.com
 spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-app.frontend.verify-url=http://localhost:3000/verify
+app.frontend.verify-url=http://localhost:5173/verify
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
@@ -16,3 +16,4 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 webhook.secret=your-webhook-secret
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.cache.type=simple
+app.fe.url=http://localhost:5173
