--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,3 +9,4 @@ spring.mail.port=1025
 app.mail.enabled=false
 app.frontend.verify-url=https://dummy-verify-url.test
 spring.cache.type=simple
+app.fe.url=http://localhost:5173
