--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,10 +8,10 @@ spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 app.frontend.verify-url=http://localhost:5173/verify
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-app.upload.temp-dir=uploads/temp/
+app.upload.base-dir=D:/app-uploads/
+spring.web.resources.static-locations=classpath:/static/,file:D:/app-uploads/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 webhook.secret=your-webhook-secret
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
