--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,10 +8,10 @@ spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 app.frontend.verify-url=https://yourdomain.com/verify
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-app.upload.temp-dir=uploads/temp/
+app.upload.base-dir=/var/www/app-uploads/
+spring.web.resources.static-locations=classpath:/static/,file:/var/www/app-uploads/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 logging.level.org.springdoc=DEBUG
 webhook.secret=your-webhook-secret
