--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.mail.password=ibpp sdch ajul xdnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.cache.type=simple
+app.reset-token.expiry-minutes=15
+app.google.client-id=${GOOGLE_CLIENT_ID}
+app.google.client-secret=${GOOGLE_CLIENT_SECRET}
