--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,6 @@ webhook.secret=your-webhook-secret
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.cache.type=simple
 app.fe.url=http://localhost:5173
+app.reset-token.expiry-minutes=15
+app.google.client-id=${GOOGLE_CLIENT_ID}
+app.google.client-secret=${GOOGLE_CLIENT_SECRET}
