--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,3 +17,6 @@ logging.level.org.springdoc=DEBUG
 webhook.secret=your-webhook-secret
 spring.cache.type=simple
 app.fe.url=http://localhost:5173
+app.reset-token.expiry-minutes=15
+app.google.client-id=${GOOGLE_CLIENT_ID}
+app.google.client-secret=${GOOGLE_CLIENT_SECRET}
