--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://trichuthanh:z9KMoKKHieqtvTgN@salesdb-dev.f0h17vh.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-dev
+spring.data.mongodb.uri=mongodb+srv://trichuthanh:z9KMoKKHieqtvTgN@salesdb-dev.f0h17vh.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-dev&tls=true
 spring.data.mongodb.database=salesdb-dev
 app.jwt.secret=sandro-sales-dev-secret-2025-very-long-and-secure-key!
 spring.mail.host=smtp.gmail.com
