--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb
+spring.data.mongodb.uri=mongodb+srv://trichuthanh:JiOAwPBRXnTApA2d@salesdb.mkf4rjc.mongodb.net/?retryWrites=true&w=majority&appName=salesdb&tls=true
 spring.data.mongodb.database=salesdb
 app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
 spring.mail.host=smtp.gmail.com
