--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://trichuthanh:3FoSuC6mwozL9N4Y@salesdb-test.vr10ibi.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-test
+spring.data.mongodb.uri=mongodb+srv://trichuthanh:3FoSuC6mwozL9N4Y@salesdb-test.vr10ibi.mongodb.net/?retryWrites=true&w=majority&appName=salesdb-test&tls=true
 spring.data.mongodb.database=salesdb-test
 app.jwt.secret=sandro-sales-secret-2025-very-long-and-secure-key!
 # Fake mail config để tránh lỗi
