--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,8 +15,10 @@ spring.web.resources.static-locations=classpath:/static/,file:D:/app-uploads/
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 webhook.secret=your-webhook-secret
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-spring.cache.type=simple
 app.fe.url=http://localhost:5173
 app.reset-token.expiry-minutes=15
 app.google.client-id=${GOOGLE_CLIENT_ID}
 app.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
