Update shop service logic

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ app.fe.url=http://localhost:5173
 app.reset-token.expiry-minutes=15
 app.google.client-id=${GOOGLE_CLIENT_ID}
 app.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.cache.type=redis
+spring.cache.type=simple
+#spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
